	Fixed #1223: Bug - Admin log shows server IP instead of user IP
	Fixed #1226: Panel maintenance mode: text message error
	Fixed #IP-1227: Page reseller statistics shows the same max/curr traffic/disk for all resellers
	Fixed #IP-1233: Autoresponder script ( imscp-arpl-msgr ) cannot write in /var/log/imscp/imscp-arpl-msgr
	Fixed #IP-1234: IPv6 addresses causes exception

------------------------------------------------------------------------------------------------------------------------
1.1.21
------------------------------------------------------------------------------------------------------------------------

2014-12-30: Laurent Declercq
	RELEASE i-MSCP 1.1.21

CONFIGS
	Changed: Dovecot becomes the default choice for POP3/IMAP servers

DISTROS
	Removed: Support for obsolete Ubuntu versions ( Quantal Quetzal, Raring Ringtail, Saucy Salamander )

ENGINE
	Changed: Remove apache log directory on domain deletion
	Fixed: Logs directory is not created in some contexts ( apache_itk )

GUI
	Fixed: Admin logs default order ( last in, first out )
	Fixed: Customer data get updated even when passwords do not match ( reseller/user_edit.php )
	Fixed: error_reporting directive value remain to default option when set to 0 ( admin/settings.php )
	Fixed: Ignore orphaned users ( users without domain ) when editing reseller

INSTALLER
	Changed: Installation of the libapache2-mpm-itk package is now delayed to avoid dpkg configuration errors
	Fixed: sysctl: permission denied on key 'net.ipv4.conf.all.promote_secondaries' ( vps )
	Fixed: /bin/cp: cannot overwrite non-directory when using symlinks ( replaced by rsync command )
	Fixed: Missing mcrypt PHP module error on fresh installation ( Trusty Tahr )
	Fixed: Prefill debconf database for the dovecot-core/create-ssl-cert question ( Dovecot )

PLUGINS
	Added: plugin_locked attribute which allow a plugin to lock another plugin for deletion
	Updated: Plugin API to version 0.2.15

TICKETS