@@ -358,10 +358,7 @@ function translate_dmn_status($status, $escapeHtml = true)
 		case 'ordered':
 			return tr('Awaiting for approval', $escapeHtml);
 		default:
-			return (isset($_SESSION['logged_from_type']) && $_SESSION['logged_from_type'] == 'admin')
-				?  tr('Unexpected error') . '<span class="icon i_help" title="' .
-					tr('Go to the debugger for more details') . '">&nbsp;</span>'
-				: tr('Unexpected error');
+			return tr('Unexpected error');
 	}
 }
 
